<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <AutoCompleteTextView
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        android:textColorHint="@color/text_hint_sign_in"
        android:textColor="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:imeOptions="actionNext"
        android:maxLines="1" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:inputType = "numberPassword"
        android:textColorHint="@color/text_hint_sign_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:maxLength="6"
        android:fontFamily="sans-serif"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnLogin"
        style="?android:textAppearanceMedium"
        android:background="@drawable/login_button_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:text="@string/action_sign_in"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_marginTop="15dp"
        android:gravity="center"
        style="?android:textAppearanceMedium"
        android:text="@string/action_skip"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
