<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingBottom="20dp"
    android:orientation="vertical">


    <Switch
        android:id="@+id/VNSwitch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:checked="true"
        android:text="@string/vietnamese"
        android:textSize="17sp"
        android:textColor="@color/text_color_language"
        android:thumb="@drawable/customswitchselector"
        android:track="@drawable/custom_track"
        />

    <Switch
        android:id="@+id/ENSwitch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/english"
        android:enabled="false"
        android:checked="false"
        android:textColor="@color/text_color_language"
        android:thumb="@drawable/customswitchselector"
        android:track="@drawable/custom_track"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/bg_line_language"
        android:text="TextView" />


    <Button
        android:id="@+id/btnLogin"
        style="?android:textAppearanceSmall"
        android:background="@drawable/bg_button_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAllCaps="false"
        android:text="@string/action_confirm"
        android:textColor="@android:color/white"
        android:textStyle="bold" />



</LinearLayout>
