<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".view.impl.AccountPasswordFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvPassOldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:text="@string/title_password_old"
            android:textColor="@color/text_color_language"
            android:textSize="15sp" />

        <EditText
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:id="@+id/edtPasswordOld"
            style="@style/style_password_edit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:hint="@string/hint_password_new2"
            android:imeOptions="actionDone"
            android:maxLength="6"
            android:textColorHint="@color/text_color_account_password_title" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/tvPassOldTitle"
            android:layout_marginTop="5dp"
            android:background="@color/bg_line_language" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">
        <TextView
            android:id="@+id/tvPassNew1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_password_new1"
            android:textColor="@color/text_color_language"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:id="@+id/edtPasswordNew1"
            style="@style/style_password_edit"
            android:hint="@string/hint_password_new1"
            android:maxLength="6"
            android:imeOptions="actionDone"
            android:textColorHint="@color/text_color_account_password_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/tvPassNew1"
            android:layout_marginTop="5dp"
            android:background="@color/bg_line_language" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/tvPassNew2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:text="@string/title_password_new2"
            android:textColor="@color/text_color_language"
            android:textSize="15sp" />

        <EditText
            android:layout_height="35dp"
            android:gravity="center_vertical"
            android:id="@+id/edtPasswordNew2"
            style="@style/style_password_edit"
            android:textColorHint="@color/text_color_account_password_title"
            android:imeOptions="actionDone"
            android:maxLength="6"
            android:hint="@string/hint_password_new2"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/tvPassNew2"
            android:layout_marginTop="5dp"
            android:background="@color/bg_line_language" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnChangePassword"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bg_button_confirm"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/action_confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>
